--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: lasttaximan
@@ -33,10 +34,10 @@ jobs:
       run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/qaramurt-keystore.jks
 
     - name: Make gradlew executable
-      run: chmod +x ./android/gradlew
+      run: chmod +x android/gradlew
 
     - name: Build Signed APK
-      run: ./android/gradlew assembleRelease
+      run: android/gradlew assembleRelease
       env:
         STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
