--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,10 +8,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: lasttaximan/lasttaximan
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -34,10 +30,10 @@ jobs:
       run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/qaramurt-keystore.jks
 
     - name: Make gradlew executable
-      run: chmod +x android/gradlew
+      run: chmod +x ./android/gradlew
 
     - name: Build Signed APK
-      run: android/gradlew assembleRelease
+      run: ./android/gradlew assembleRelease
       env:
         STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
