--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -10,7 +10,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: lasttaximan  # Matches the nesting: /home/runner/work/lasttaximan/lasttaximan
+        working-directory: lasttaximan  # This fixes the nesting – all steps run inside the subfolder where your files are
 
     steps:
     - name: Checkout code
@@ -26,13 +26,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-
-    - name: Cache npm
-      uses: actions/cache@v4
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: ${{ runner.os }}-node-
 
     - name: Install dependencies
       run: npm install --legacy-peer-deps
