--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,7 +3,7 @@ name: Build QaramurtTaxi APK
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # Manual trigger option
+  workflow_dispatch:
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./android/gradlew
 
-      - name: Clean Gradle build
+      - name: Clear Gradle cache & clean
         run: |
           cd android
           ./gradlew clean
