--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,22 +4,10 @@ apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services'
 
 /**
- * This is the configuration block to customize your React Native Android app.
- * By default you don't need to apply any configuration, just uncomment the lines you need.
+ * React Native configuration
  */
 react {
-    /* Enable/Disable New Architecture - explicitly set to false */
     newArchEnabled = false
-
-    /* Folders */
-    // bundleAssetName = "index.android.bundle"
-    // entryFile = "index.android.js"
-    // bundleCommand = "ram-bundle"
-
-    /* Hermes Commands */
-    // hermesCommand = "../../node_modules/react-native/sdks/hermes/hermes-compiler-bin.js"
-    // hermesFlags = ["-O", "-output-source-map"]
-
     autolinkLibrariesWithApp()
 }
 
@@ -32,6 +20,7 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace "com.qaramurttaxi"
+
     defaultConfig {
         applicationId "com.qaramurttaxi"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -48,6 +37,22 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            // Use real keystore from secrets in CI
+            if (System.getenv("STORE_PASSWORD") && System.getenv("KEY_PASSWORD") && System.getenv("KEY_ALIAS")) {
+                storeFile file("qaramurt-keystore.jks")
+                storePassword System.getenv("STORE_PASSWORD")
+                keyAlias System.getenv("KEY_ALIAS")
+                keyPassword System.getenv("KEY_PASSWORD")
+            } else {
+                // Fallback to debug signing locally
+                storeFile file('debug.keystore')
+                storePassword 'android'
+                keyAlias 'androiddebugkey'
+                keyPassword 'android'
+            }
+        }
     }
 
     buildTypes {
@@ -55,7 +60,8 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            signingConfig signingConfigs.debug
+            // Use proper release signing in CI, debug locally if secrets not available
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -64,16 +70,18 @@ android {
 
 dependencies {
     implementation("com.facebook.react:react-android")
-    implementation project(':react-native-document-picker')
 
-    implementation platform('com.google.firebase:firebase-bom:31.2.1')
+    // Firebase - use latest BOM
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'com.google.firebase:firebase-auth'
 
-    // Use JSC since hermesEnabled=false in gradle.properties
+    // Google Play Services
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+
+    // Use JSC (hermesEnabled=false in gradle.properties)
     implementation jscFlavor
 
-    // If you ever want Hermes, it will be picked up automatically from gradle.properties
-    // No need for conditional here
+    // MultiDex support
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
