--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,19 +39,12 @@ android {
         }
 
         release {
-            // Use real keystore from secrets in CI
-            if (System.getenv("STORE_PASSWORD") && System.getenv("KEY_PASSWORD") && System.getenv("KEY_ALIAS")) {
-                storeFile file("qaramurt-keystore.jks")
-                storePassword System.getenv("STORE_PASSWORD")
-                keyAlias System.getenv("KEY_ALIAS")
-                keyPassword System.getenv("KEY_PASSWORD")
-            } else {
-                // Fallback to debug signing locally
-                storeFile file('debug.keystore')
-                storePassword 'android'
-                keyAlias 'androiddebugkey'
-                keyPassword 'android'
-            }
+            // The keystore is decoded to android/app/qaramurt-keystore.jks
+            // Gradle runs from android/ directory, so we need to go up one level
+            storeFile file("../app/qaramurt-keystore.jks")
+            storePassword System.getenv("STORE_PASSWORD")
+            keyAlias System.getenv("KEY_ALIAS")
+            keyPassword System.getenv("KEY_PASSWORD")
         }
     }
 
@@ -60,7 +53,6 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Use proper release signing in CI, debug locally if secrets not available
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
@@ -71,17 +63,17 @@ android {
 dependencies {
     implementation("com.facebook.react:react-android")
 
-    // Firebase - use latest BOM
+    // Firebase - latest stable BOM
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth'
 
-    // Google Play Services
+    // Google Play Services Auth
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
 
-    // Use JSC (hermesEnabled=false in gradle.properties)
+    // Use JSC (Hermes disabled in gradle.properties)
     implementation jscFlavor
 
-    // MultiDex support
+    // MultiDex
     implementation 'androidx.multidex:multidex:2.0.1'
 }
