fix: new keystore with password 123456 + updated signing config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,11 +39,11 @@ android {
         }
 
         release {
-            // Absolute path from project root — 100% reliable in CI
-            storeFile file("${rootProject.projectDir}/app/qaramurt-keystore.jks")
-            storePassword "qaramurt@toychpro.kz"
+            // Path from android/ directory (Gradle runs from here)
+            storeFile file("app/qaramurt-keystore.jks")
+            storePassword "123456"
             keyAlias "qaramurt"
-            keyPassword "qaramurt@toychpro.kz"
+            keyPassword "123456"
             storeType "pkcs12"
         }
     }
@@ -63,13 +63,17 @@ android {
 dependencies {
     implementation("com.facebook.react:react-android")
 
+    // Firebase - latest stable BOM
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth'
 
+    // Google Play Services Auth
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
 
+    // Use JSC (Hermes disabled in gradle.properties)
     implementation jscFlavor
 
+    // MultiDex
     implementation 'androidx.multidex:multidex:2.0.1'
 }
