temp: use debug signing for release to get immediate signed APK

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,13 +49,13 @@ android {
         }
     }
 
-    buildTypes {
+        buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            signingConfig signingConfigs.release
-            minifyEnabled enableProguardInReleaseBuilds
+            signingConfig signingConfigs.debug  // Temporary: uses debug key for signing
+            minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
