chore: finalize CI workflow and stable Android build config

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,63 +1,79 @@
-name: Build QaramurtTaxi APK
+name: Build Signed Android APK
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    env:
+      # 🔐 Signing secrets
+      KEYSTORE_PATH: android/app/qaramurt-release.jks
+      STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+
     steps:
-      - name: Checkout code
+      # -----------------------------
+      # 1️⃣ Checkout source
+      # -----------------------------
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      # -----------------------------
+      # 2️⃣ Set up Java 17 (CRITICAL)
+      # -----------------------------
+      - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
+      # -----------------------------
+      # 3️⃣ Verify keystore exists
+      # -----------------------------
+      - name: Verify keystore
+        run: |
+          ls -la android/app
+          test -f android/app/qaramurt-release.jks
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      # -----------------------------
+      # 4️⃣ Setup Android SDK
+      # -----------------------------
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
-      - name: Make gradlew executable
-        run: chmod +x ./android/gradlew
+      - name: Install SDK packages
+        run: |
+          sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Clear Gradle cache & clean
+      # -----------------------------
+      # 5️⃣ Clean Gradle (as you said)
+      # -----------------------------
+      - name: Clean Gradle
         run: |
           cd android
           ./gradlew clean
-          cd ..
+          rm -rf ~/.gradle/caches
+          rm -rf ~/.gradle/daemon
 
-      - name: Accept SDK Licenses and Install Preferred NDK
-        run: |
-          echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null
-          # Install preferred NDK for RN 0.77 + retry for network issues
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "ndk;27.0.12077973" || $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "ndk;27.0.12077973"
-
-      - name: Decode Keystore from Secret
-        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/qaramurt-keystore.jks
-
-      - name: Build Signed APK
+      # -----------------------------
+      # 6️⃣ Build Signed APK
+      # -----------------------------
+      - name: Build Release APK
         run: |
           cd android
-          ./gradlew assembleRelease --no-daemon --warning-mode all --stacktrace --info
-        env:
-          STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          ./gradlew assembleRelease --no-daemon --stacktrace
 
+      # -----------------------------
+      # 7️⃣ Upload APK artifact
+      # -----------------------------
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: QaramurtTaxi-APK
+          name: qaramurt-release-apk
           path: android/app/build/outputs/apk/release/app-release.apk
-          retention-days: 30
-          if-no-files-found: error
