--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,36 +1,64 @@
-# Project-wide Gradle settings.
+########################################
+# Project-wide Gradle settings
+########################################
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+# -------------------------------
+# JVM & Java (CRITICAL)
+# -------------------------------
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Force Gradle to run on Java 17 ONLY (prevents Java 8/11/21/25 conflicts)
+org.gradle.java.home=/usr/lib/jvm/temurin-17-jdk-amd64
 
-# Increased JVM memory for daemon to handle large RN builds smoothly (especially in CI)
-org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+# Stable memory settings for CI & React Native
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
-# Enable parallel execution and configuration cache for faster builds
+# Disable daemon in CI to avoid JVM mismatch reuse
+org.gradle.daemon=false
+
+
+# -------------------------------
+# Gradle behavior (STABILITY > SPEED)
+# -------------------------------
+
+# Parallel builds are safe
 org.gradle.parallel=true
-org.gradle.configureondemand=true
-org.gradle.caching=true
 
-# AndroidX and Jetifier (required for React Native)
+# ❌ Disable these — they break RN + Kotlin 2.x builds
+org.gradle.configureondemand=false
+org.gradle.caching=false
+org.gradle.configuration-cache=false
+org.gradle.unsafe.configuration-cache=false
+
+
+# -------------------------------
+# AndroidX & Jetifier (REQUIRED)
+# -------------------------------
+
 android.useAndroidX=true
 android.enableJetifier=true
 
-# Build only necessary architectures to speed up CI builds (recommended for release)
-# armeabi-v7a is rarely needed in 2025 — you can remove it if your users are mostly 64-bit
+
+# -------------------------------
+# React Native settings
+# -------------------------------
+
+# Build only required ABIs (good for CI & release)
 reactNativeArchitectures=arm64-v8a,x86_64
 
-# Explicitly disable New Architecture (Fabric + TurboModules) — critical for variant fix
+# Disable New Architecture (VERY IMPORTANT for stability)
 newArchEnabled=false
 fabricEnabled=false
 turboModuleEnabled=false
 
-# Use JSC instead of Hermes (consistent with your setup)
+# Use JSC (Hermes disabled as per your setup)
 hermesEnabled=false
 
-# Optional: Improve build performance
-android.defaults.buildcache=true
+# Prevent unnecessary JS bundling in debug
 reactNativeBundleInDebug=false
+
+
+# -------------------------------
+# Android build cache (deprecated — disable)
+# -------------------------------
+
+android.defaults.buildcache=false
