--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply plugin: 'com.google.gms.google-services'
+apply plugin: "com.google.gms.google-services"
 
 /**
  * React Native configuration
@@ -12,64 +12,107 @@ react {
 }
 
 def enableProguardInReleaseBuilds = false
-def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = "org.webkit:android-jsc:+"
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    compileSdk rootProject.ext.compileSdkVersion
 
     namespace "com.qaramurttaxi"
 
+    compileSdk 34
+    buildToolsVersion "34.0.0"
+
     defaultConfig {
         applicationId "com.qaramurttaxi"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+
+        minSdk 23
+        targetSdk 34
+
         versionCode 1
         versionName "2.0.0"
+
         multiDexEnabled true
     }
 
+    /**
+     * 🔐 Signing configs
+     */
     signingConfigs {
+
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file("debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
         }
 
         release {
-            // Real signed release config (using secrets in CI)
-            storeFile file("app/qaramurt-keystore.jks")
+            // DO NOT hardcode secrets
+            storeFile file(System.getenv("KEYSTORE_PATH"))
             storePassword System.getenv("STORE_PASSWORD")
             keyAlias System.getenv("KEY_ALIAS")
             keyPassword System.getenv("KEY_PASSWORD")
-            storeType "pkcs12"
         }
     }
 
     buildTypes {
+
         debug {
             signingConfig signingConfigs.debug
         }
+
         release {
-            signingConfig signingConfigs.release  // Real signed release
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
+
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
+        }
+    }
+
+    /**
+     * Java & Kotlin (CRITICAL)
+     */
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
+    /**
+     * Prevent duplicate META-INF crashes
+     */
+    packagingOptions {
+        resources {
+            excludes += [
+                "META-INF/LICENSE*",
+                "META-INF/NOTICE*",
+                "META-INF/*.kotlin_module"
+            ]
         }
     }
 }
 
 dependencies {
+
     implementation("com.facebook.react:react-android")
 
-    implementation platform('com.google.firebase:firebase-bom:33.1.2')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth'
+    // Firebase (BOM-controlled)
+    implementation platform("com.google.firebase:firebase-bom:33.1.2")
+    implementation "com.google.firebase:firebase-analytics-ktx"
+    implementation "com.google.firebase:firebase-auth"
 
-    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    // Google Sign-In
+    implementation "com.google.android.gms:play-services-auth:21.2.0"
 
+    // JavaScript engine
     implementation jscFlavor
 
-    implementation 'androidx.multidex:multidex:2.0.1'
+    // Multidex
+    implementation "androidx.multidex:multidex:2.0.1"
 }
