--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -75,20 +75,22 @@ jobs:
       # -----------------------------
       # 8️⃣ Clean Gradle
       # -----------------------------
-      - name: Clean Gradle
+      - name: Clean Gradle and cache
         run: |
           cd android
-          ./gradlew clean
+          ./gradlew clean --no-daemon
           rm -rf ~/.gradle/caches
           rm -rf ~/.gradle/daemon
+          rm -rf ~/.gradle/wrapper/dists
 
       # -----------------------------
-      # 9️⃣ Build Signed APK
+      # 9️⃣ Build Signed APK (with warnings & full stacktrace)
       # -----------------------------
       - name: Build Release APK
         run: |
           cd android
-          ./gradlew assembleRelease --no-daemon --stacktrace
+          # ✅ Run with full stacktrace and show all warnings
+          ./gradlew assembleRelease --no-daemon --stacktrace --warning-mode all
 
       # -----------------------------
       # 🔟 Upload APK artifact
