Fix libraries and build

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
         }
 
         release {
-            // DO NOT hardcode secrets
+        
             storeFile file(System.getenv("KEYSTORE_PATH"))
             storePassword System.getenv("STORE_PASSWORD")
             keyAlias System.getenv("KEY_ALIAS")
@@ -115,4 +115,9 @@ dependencies {
 
     // Multidex
     implementation "androidx.multidex:multidex:2.0.1"
-}
+
+    MYAPP_UPLOAD_STORE_FILE=aramurt-keystore.jks
+    MYAPP_UPLOAD_KEY_ALIAS=qaramurt
+    MYAPP_UPLOAD_STORE_PASSWORD=123456
+    MYAPP_UPLOAD_KEY_PASSWORD=123456
+    }
