--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.0.0",
     "jest": "^29.6.2",
     "patch-package": "^8.0.1",
