--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gesture-handler": "~2.22.0",
     "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
@@ -64,7 +64,7 @@
     "react-native-reanimated": "~3.16.7",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
+    "react-native-screens": "~4.8.0",
     "react-native-share": "^11.0.4",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.15.1",
