Fix build issues

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -62,3 +62,4 @@ reactNativeBundleInDebug=false
 # -------------------------------
 
 android.defaults.buildcache=false
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g
