Clean up large build folders from Git

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
+# Node
 node_modules/
+npm-debug.log
+yarn-error.log
+yarn-debug.log
+
+# Android
+android/.gradle/
 android/app/build/
-ios/build/
+android/build/
+android/.idea/
+android/local.properties
+android/captures/
+
+# iOS
 ios/Pods/
-*.jks
+ios/build/
+ios/.xcworkspace/
+ios/Podfile.lock  # Optional, but common
+
+# React Native
 *.log
+__tests__/__snapshots__/
+.metro-*/
